Modifying gitignore to exclude the cache files

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 # Idea files:
 .idea/
 
+# Cache files:
+sumanmaparu/resume/__pycache__/
+sumanmaparu/sumanmaparu/resume/__pycache__/
+
 ## File-based project format:
 *.iws
 
