--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 ### Chaos Inc. ###
 ### Created By: Maparu, Suman ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # Idea files:
 .idea/
 
 # Cache files:
-sumanmaparu/resume/__pycache__/
-sumanmaparu/sumanmaparu/__pycache__/
+.sumanmaparu/resume/__pycache__/
+.sumanmaparu/resume/migrations/__pycache__/
+.sumanmaparu/sumanmaparu/__pycache__/
 
 ## File-based project format:
 *.iws
