--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@
 .idea/
 
 # Cache files:
-.sumanmaparu/resume/__pycache__/
-.sumanmaparu/resume/migrations/__pycache__/
-.sumanmaparu/sumanmaparu/__pycache__/
+sumanmaparu/resume/__pycache__/
+sumanmaparu/resume/migrations/__pycache__/
+sumanmaparu/sumanmaparu/__pycache__/
 
 ## File-based project format:
 *.iws
